// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hmr js has indicator component 1`] = `""`;

exports[`hmr js hot updates js 1`] = `
Array [
  "init",
]
`;

exports[`hmr js hot updates js 2`] = `
Array [
  "init",
  "hot",
]
`;
